# FSM-C-

./: .gitignore  CMakeLists.txt  FSM-C++.sln  README.md  imgui.ini
FSM-C++/: Agent.cc  Agent.h  FSM-C++.vcxproj  FSM-C++.vcxproj.filters  Idle.h  Inclusions.h  InterfaceManager.h  Locations.h  Social.h  States.cc  States.h  Telegram.cc  Telegram.h  TimeManager.cc  TimeManager.h  dead.h  drink.h  eat.h  gather.h  gui.cpp  gui.h  main.cc  mining.h  sleep.h  state.h
